--- a/src/components/main/carousel/Carousel.css
+++ b/src/components/main/carousel/Carousel.css
@@ -9,6 +9,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: 20px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .carousel-cards{
@@ -24,12 +25,15 @@
     width: 320px;
     height: 280px;
     overflow: hidden;
+    margin-top: 10px;
 }
 
 .carousel-image-text{
     position: relative;
     top: -60px;
     left: 20px;
+    text-decoration: none !important;
+    color: red;
     
 }
 
@@ -41,10 +45,18 @@
     filter: drop-shadow(3px 10px 10px #d0d0d3);
     
 }
+.carousel-button-div{
+    width: 85%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .carousel-button{
     margin-top: 20px;
     width: 150px;
+    height: 30px;
     background-color: #202c62;
     color: white;
     justify-self: center;
