--- a/src/components/main/banner/banner.css
+++ b/src/components/main/banner/banner.css
@@ -17,10 +17,25 @@
     font-size: 50px;
     font-weight: 800;
     line-height: 0%;
+    font-family: 'Roboto', sans-serif;
 }
 
 .main-banner-h4 {
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 800;
     line-height: 0%;
+    font-family: 'Roboto', sans-serif;
+}
+
+@media (max-width: 850px) {
+    .main-banner{
+        height: 100vh;
+    }
+    .main-banner-centered{
+        width: 85%;
+        margin: auto;
+    }
+    .main-banner-h2{
+        font-size: 30px;
+    }
 }
