--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -2,4 +2,11 @@
     width: 88%;
     margin-left: 12%;
     z-index: -1;
+}
+
+@media (max-width: 850px){
+  .main_content{
+    width: 100%;
+    margin-left: 0;
   }
+}
