--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -11,6 +11,12 @@
     flex-grow: 2;
 }
 
+.navbar-ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .navbar-li{
     padding: 20px 10px;
     list-style: none;
@@ -22,4 +28,10 @@
 .navbar-li:hover {
     background-color: #e1261c;
     cursor: pointer;
+}
+
+@media (max-width: 850px){
+    .navbar {
+        display: none;
+    }
 }
